# django_cowsay

./: README.md  db.sqlite3  manage.py  pyproject.toml
django_cowsay/: apps.py  forms.py  models.py  views.py
django_cowsay/migrations/: 0001_initial.py
django_cowsay/templates/: history.html  index.html
django_cowsay_app/: asgi.py  settings.py  urls.py  wsgi.py
