[tool.poetry]
name = "cowsay_django"
version = "0.1.0"
description = "displaying cowsay"
authors = ["kbrooks87 <kbrooks10011987@gmail.com>"]
license = "0BSD"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
